--- a/www/src/css/custom.css
+++ b/www/src/css/custom.css
@@ -4,27 +4,37 @@
  * work well for content-centric websites.
  */
 
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
+
 /* You can override the default Infima variables here. */
 :root {
     --ifm-color-primary: #0065ff;
     --ifm-color-primary-dark: #005be6;
     --ifm-color-primary-darker: #0056d9;
     --ifm-color-primary-darkest: #0047b3;
-    --ifm-color-primary-light: #1a74ff;
+    --ifm-color-primary-light: #0061f5;
     --ifm-color-primary-lighter: #267cff;
-    --ifm-color-primary-lightest: #4d93ff;
+    --ifm-color-primary-lightest: #1c76ff;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-    --ifm-color-primary: #0065ff;
-    --ifm-color-primary-dark: #21af90;
-    --ifm-color-primary-darker: #1fa588;
-    --ifm-color-primary-darkest: #1a8870;
-    --ifm-color-primary-light: #29d5b0;
-    --ifm-color-primary-lighter: #32d8b4;
-    --ifm-color-primary-lightest: #4fddbf;
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --ifm-color-primary: #2078ff;
+    --ifm-color-primary-dark: #0367ff;
+    --ifm-color-primary-darker: #0060f4;
+    --ifm-color-primary-darkest: #004fc9;
+    --ifm-color-primary-light: #3d89ff;
+    --ifm-color-primary-lighter: #4b92ff;
+    --ifm-color-primary-lightest: #76acff;
+}
+
+h1.hero__title {
+    font-family: 'Rubik', sans-serif;
+}
+
+b.navbar__title {
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.2em;
 }
 
 .header-github-link:hover {
